--- a/kontakt.html
+++ b/kontakt.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Kontakt</title>
+    <link rel="stylesheet" href="style.css"></head>
+</head>
+<body>
 
+<div class="navbar"></div>
+<script src="navbar.js"></script>
+
+</body>
+</html>
