--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kolokwium 1</title>
+    <title>Kolokwium</title>
     <link rel="stylesheet" href="style.css"></head>
 </head>
 <body>
+<div class="navbar"></div>
 
+<div class="box" id = "zmiana"></div>
+<button class="butzmian" id="kwadrat" onclick="kolor()">Zmień kolor</button>
 
-<div class="box"></div>
-
-<button class="button">Zmień kolor</button>
-
+<script src="script.js"></script>
+<script src="navbar.js"></script>
 
 </body>
 </html>
